--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Facturacion</string>
     <string name="title_activity_sale_screem">saleScreem</string>
+    <string name="navigation_drawer_open">Probando 1</string>
+    <string name="navigation_drawer_close">Probando 2</string>
 </resources>
