--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_sale_screem">saleScreem</string>
     <string name="navigation_drawer_open">Probando 1</string>
     <string name="navigation_drawer_close">Probando 2</string>
+    <string name="select_job">Selecciona un Cargo</string>
 </resources>
